edition = "2023";

option go_package = "github.com/solidDoWant/backup-tool/pkg/grpc/gen/proto/backup-tool/s3/v1;s3_v1";

message Credentials {
  string access_key_id = 1;
  string secret_access_key = 2;
  string session_token = 3;
  string region = 4;
  string endpoint = 5;
}